Fix translation errors [en_us]

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -43,8 +43,8 @@
 	"block.betternether.black_apple_seed": "Black Apple Seed",
 	"block.betternether.black_bush": "Black Bush",
 	
-	"block.betternether.red_large_mushroom": "Red Large Mushroom",
-	"block.betternether.brown_large_mushroom": "Brown Large Mushroom",
+	"block.betternether.red_large_mushroom": "Large Red Mushroom",
+	"block.betternether.brown_large_mushroom": "Large Brown Mushroom",
 	"block.betternether.lucis_mushroom": "Lucis Mushroom",
 
 	"block.betternether.eyeball": "Eyeball Block",
@@ -401,20 +401,20 @@
 	"block.betternether.bar_stool_mushroom_fir": "Mushroom Fir Bar Stool",
 	
 	"block.betternether.obsidian_bricks": "Obsidian Bricks",
-	"block.betternether.obsidian_bricks_stairs": "Obsidian Bricks Stairs",
-	"block.betternether.obsidian_bricks_slab": "Obsidian Bricks Slab",
+	"block.betternether.obsidian_bricks_stairs": "Obsidian Brick Stairs",
+	"block.betternether.obsidian_bricks_slab": "Obsidian Brick Slab",
 	"block.betternether.obsidian_tile": "Obsidian Tile",
-	"block.betternether.obsidian_tile_small": "Obsidian Small Tile",
+	"block.betternether.obsidian_tile_small": "Small Obsidian Tile",
 	"block.betternether.obsidian_tile_stairs": "Obsidian Tile Stairs",
 	"block.betternether.obsidian_tile_slab": "Obsidian Tile Slab",
 	"block.betternether.obsidian_glass": "Obsidian Glass",
 	"block.betternether.obsidian_glass_pane": "Obsidian Glass Pane",
 	"block.betternether.blue_obsidian": "Blue Obsidian",
 	"block.betternether.blue_obsidian_bricks": "Blue Obsidian Bricks",
-	"block.betternether.blue_obsidian_bricks_stairs": "Blue Obsidian Bricks Stairs",
-	"block.betternether.blue_obsidian_bricks_slab": "Blue Obsidian Bricks Slab",
+	"block.betternether.blue_obsidian_bricks_stairs": "Blue Obsidian Brick Stairs",
+	"block.betternether.blue_obsidian_bricks_slab": "Blue Obsidian Brick Slab",
 	"block.betternether.blue_obsidian_tile": "Blue Obsidian Tile",
-	"block.betternether.blue_obsidian_tile_small": "Blue Obsidian Small Tile",
+	"block.betternether.blue_obsidian_tile_small": "Small Blue Obsidian Tile",
 	"block.betternether.blue_obsidian_tile_stairs": "Blue Obsidian Tile Stairs",
 	"block.betternether.blue_obsidian_tile_slab": "Blue Obsidian Tile Slab",
 	"block.betternether.blue_obsidian_glass": "Blue Obsidian Glass",
@@ -447,7 +447,7 @@
 	"betternether.flat_nether": "Flat Nether",
 	
 	"item.betternether.spawn_egg_hydrogen_jellyfish": "Hydrogen Jellyfish Spawn Egg",
-	"block.betternether.brick_pot": "Brick Pot",
+	"block.betternether.brick_pot": "Nether Brick Pot",
 	
 	"block.betternether.striped_log_rubeus": "Stripped Rubeus Log",
 	"block.betternether.striped_bark_rubeus": "Stripped Rubeus Bark",
@@ -502,19 +502,19 @@
 	"block.betternether.soul_sandstone_chiseled": "Chiseled Soul Sandstone",
 	
 	"block.betternether.soul_sandstone_stairs": "Soul Sandstone Stairs",
-	"block.betternether.soul_sandstone_cut_stairs": "Cutted Soul Sandstone Stairs",
+	"block.betternether.soul_sandstone_cut_stairs": "Cut Soul Sandstone Stairs",
 	"block.betternether.soul_sandstone_smooth_stairs": "Smooth Soul Sandstone Stairs",
 	
 	"block.betternether.soul_sandstone_slab": "Soul Sandstone Slab",
-	"block.betternether.soul_sandstone_cut_slab": "Cutted Soul Sandstone Slab",
+	"block.betternether.soul_sandstone_cut_slab": "Cut Soul Sandstone Slab",
 	"block.betternether.soul_sandstone_smooth_slab": "Smooth Soul Sandstone Slab",
 	
 	"block.betternether.soul_sandstone_wall": "Soul Sandstone Wall",
 	
 	"block.betternether.basalt_bricks": "Basalt Bricks",
-	"block.betternether.basalt_bricks_stairs": "Basalt Bricks Stairs",
-	"block.betternether.basalt_bricks_slab": "Basalt Bricks Slab",
-	"block.betternether.basalt_bricks_wall": "Basalt Bricks Wall",
+	"block.betternether.basalt_bricks_stairs": "Basalt Brick Stairs",
+	"block.betternether.basalt_bricks_slab": "Basalt Brick Slab",
+	"block.betternether.basalt_bricks_wall": "Basalt Brick Wall",
 	
 	"item.betternether.cincinnasite_hoe": "Cincinnasite Hoe",
 	"item.betternether.cincinnasite_hoe_diamond": "Cincinnasite-Diamond Hoe",
@@ -621,11 +621,11 @@
 	"block.betternether.golden_lumabus_vine": "Golden Lumabus Vine",
 	
 	"block.betternether.cincinnasite_fire_bowl": "Cincinnasite Fire Bowl",
-	"block.betternether.bricks_fire_bowl": "Bricks Fire Bowl",
+	"block.betternether.bricks_fire_bowl": "Nethe Brick Fire Bowl",
 	"block.betternether.netherite_fire_bowl": "Netherite Fire Bowl",
-	"block.betternether.cincinnasite_fire_bowl_soul": "Soul Cincinnasite Fire Bowl",
-	"block.betternether.bricks_fire_bowl_soul": "Soul Bricks Fire Bowl",
-	"block.betternether.netherite_fire_bowl_soul": "Soul Netherite Fire Bowl",
+	"block.betternether.cincinnasite_fire_bowl_soul": "Cincinnasite Soul Fire Bowl",
+	"block.betternether.bricks_fire_bowl_soul": "Nether Brick Soul Fire Bowl",
+	"block.betternether.netherite_fire_bowl_soul": "Netherite Soul Fire Bowl",
 	
 	"block.betternether.swampland_grass": "Swampland Grass",
 	"block.betternether.basalt_slab": "Basalt Slab",
@@ -648,8 +648,8 @@
 	"block.betternether.chest_anchor_tree": "Anchor Tree Chest",
 	"block.betternether.crafting_table_anchor_tree": "Anchor Tree Crafting Table",
 	"block.betternether.sign_anchor_tree": "Anchor Tree Sign",
-	"block.betternether.striped_bark_anchor_tree": "Anchor Tree Stripped Bark",
-	"block.betternether.striped_log_anchor_tree": "Anchor Tree Stripped Log",
+	"block.betternether.striped_bark_anchor_tree": "Stripped Anchor Tree Bark",
+	"block.betternether.striped_log_anchor_tree": "Stripped Anchor Tree Log",
 	"block.betternether.taburet_anchor_tree": "Anchor Tree Taburet",
 	
 	"block.betternether.anchor_tree_vine": "Anchor Tree Vine",
@@ -677,8 +677,8 @@
 	"block.betternether.chest_nether_sakura": "Nether Sakura Chest",
 	"block.betternether.crafting_table_nether_sakura": "Nether Sakura Crafting Table",
 	"block.betternether.sign_nether_sakura": "Nether Sakura Sign",
-	"block.betternether.striped_bark_nether_sakura": "Nether Sakura Stripped Bark",
-	"block.betternether.striped_log_nether_sakura": "Nether Sakura Stripped Log",
+	"block.betternether.striped_bark_nether_sakura": "Stripped Nether Sakura Bark",
+	"block.betternether.striped_log_nether_sakura": "Stripped Nether Sakura Log",
 	"block.betternether.taburet_nether_sakura": "Nether Sakura Taburet",
 	
 	"block.betternether.nether_sakura_leaves": "Nether Sakura Leaves",
