--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -621,7 +621,7 @@
 	"block.betternether.golden_lumabus_vine": "Golden Lumabus Vine",
 	
 	"block.betternether.cincinnasite_fire_bowl": "Cincinnasite Fire Bowl",
-	"block.betternether.bricks_fire_bowl": "Nethe Brick Fire Bowl",
+	"block.betternether.bricks_fire_bowl": "Nether Brick Fire Bowl",
 	"block.betternether.netherite_fire_bowl": "Netherite Fire Bowl",
 	"block.betternether.cincinnasite_fire_bowl_soul": "Cincinnasite Soul Fire Bowl",
 	"block.betternether.bricks_fire_bowl_soul": "Nether Brick Soul Fire Bowl",
