Texture & deltas name fix

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -377,6 +377,7 @@
 	"biome.betternether.poor_nether_grasslands": "Poor Nether Grasslands",
 	"biome.betternether.upside_down_forest": "Upside Down Forest",
 	"biome.betternether.old_swampland": "Old Swampland",
+	"biome.betternether.flooded_deltas": "Flooded Deltas",
 	
 	"block.betternether.mushroom_fir": "Mushroom Fir",
 	"block.betternether.mushroom_fir_sapling": "Mushroom Fir Sapling",
