--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -378,6 +378,7 @@
 	"biome.betternether.flooded_deltas": "Затопленные дельты",
 	"biome.betternether.upside_down_forest": "Перевёрнутый лес",
 	"biome.betternether.old_swampland": "Старое болото",
+	"biome.betternether.flooded_deltas": "Затопленные дельты",
 	
 	"block.betternether.mushroom_fir": "Грибная ель",
 	"block.betternether.mushroom_fir_sapling": "Саженец грибной ели",
