--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -69,7 +69,7 @@
 	"block.betternether.cincinnasite_bricks": "Cincinnasite Bricks",
 	"block.betternether.cincinnasite_bricks_pillar": "Cincinnasite Brick Pillar",
 	"block.betternether.cincinnasite_button": "Cincinnasite Button",
-	"block.betternether.cincinnasite_carved": "Cincinnasite Carved",
+	"block.betternether.cincinnasite_carved": "Carved Cincinnasite",
 	"block.betternether.cincinnasite_forge": "Cincinnasite Forge",
 	"block.betternether.cincinnasite_forged": "Forged Cincinnasite Block",
 	"block.betternether.cincinnasite_frame": "Cincinnasite Frame",
