--- a/src/main/resources/assets/betternether/lang/en_gb.json
+++ b/src/main/resources/assets/betternether/lang/en_gb.json
@@ -9,6 +9,6 @@
 	"block.betternether.quartz_glass_pane_gray": "Grey Quartz Pane",
 	"block.betternether.quartz_glass_pane_light_gray": "Light Grey Quartz Pane",
 	"block.betternether.quartz_glass_framed_pane_gray": "Grey Framed Quartz Pane",
-	"block.betternether.quartz_glass_framed_pane_light_gray": "Light Grey Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_light_gray": "Light Grey Framed Quartz Pane"
 	
 }
