--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -14,7 +14,7 @@
   "entity.betternether.skull": "Totenkopf",
   "item.betternether.spawn_egg_skull": "Totenkopf Spawn-Ei",
 
-  "item.betternether.black_apple": "Dunkelapfle",
+  "item.betternether.black_apple": "Dunkelapfel",
 
   "item.betternether.cincinnasite": "Cincinnasit",
   "item.betternether.cincinnasite_axe": "Cincinnasitaxt",
@@ -43,8 +43,8 @@
   "block.betternether.black_apple_seed": "Dunkelapfelsamen",
   "block.betternether.black_bush": "Dunkelbusch",
 
-  "block.betternether.red_large_mushroom": "Großer Roter Pilz",
-  "block.betternether.brown_large_mushroom": "Großer Brauner Pilz",
+  "block.betternether.red_large_mushroom": "Großer roter Pilz",
+  "block.betternether.brown_large_mushroom": "Großer brauner Pilz",
   "block.betternether.lucis_mushroom": "Lucispilz",
 
   "block.betternether.eyeball": "Augapfelblock",
@@ -58,47 +58,47 @@
   "block.betternether.bone_reed_door": "Knochenschilftür",
   "block.betternether.bone_slab": "Knochenstufe",
   "block.betternether.bone_stairs": "Knochentreppe",
-  "block.betternether.bone_tile": "Knochenkachel",
+  "block.betternether.bone_tile": "Behauener Knochenblock",
   "block.betternether.bone_wall": "Knochenwand",
 
   "block.betternether.chest_of_drawers": "Kommode",
 
-  "block.betternether.cincinnasite_bars": "Cincinnasit Bars",
-  "block.betternether.cincinnasite_block": "Cincinnasit Block",
-  "block.betternether.cincinnasite_brick_plate": "Cincinnasite Brick Plate",
-  "block.betternether.cincinnasite_bricks": "Cincinnasite Bricks",
-  "block.betternether.cincinnasite_bricks_pillar": "Cincinnasite Brick Pillar",
-  "block.betternether.cincinnasite_button": "Cincinnasite Button",
-  "block.betternether.cincinnasite_carved": "Carved Cincinnasite",
-  "block.betternether.cincinnasite_forge": "Cincinnasite Forge",
-  "block.betternether.cincinnasite_forged": "Forged Cincinnasite Block",
-  "block.betternether.cincinnasite_frame": "Cincinnasite Frame",
-  "block.betternether.cincinnasite_lantern": "Cincinnasite Lantern",
-  "block.betternether.cincinnasite_ore": "Cincinnasite Ore",
-  "block.betternether.cincinnasite_pedestal": "Cincinnasite Pedestal",
-  "block.betternether.cincinnasite_pillar": "Cincinnasite Pillar",
-  "block.betternether.cincinnasite_plate": "Cincinnasite Plate",
-  "block.betternether.cincinnasite_pot": "Cincinnasite Pot",
-  "block.betternether.cincinnasite_slab": "Cincinnasite Slab",
-  "block.betternether.cincinnasite_stairs": "Cincinnasite Stairs",
-  "block.betternether.cincinnasite_tile_large": "Large Cincinnasite Tile",
-  "block.betternether.cincinnasite_tile_small": "Small Cincinnasite Tile",
-  "block.betternether.cincinnasite_wall": "Cincinnasite Wall",
+  "block.betternether.cincinnasite_bars": "Cincinnasitgitter",
+  "block.betternether.cincinnasite_block": "Cincinnasitblock",
+  "block.betternether.cincinnasite_brick_plate": "Cincinnasitziegelornament",
+  "block.betternether.cincinnasite_bricks": "Cincinnasitziegel",
+  "block.betternether.cincinnasite_bricks_pillar": "Cincinnasitziegelsäule",
+  "block.betternether.cincinnasite_button": "Cincinnasitknopf",
+  "block.betternether.cincinnasite_carved": "Gemeißelter Cincinnasit",
+  "block.betternether.cincinnasite_forge": "Cincinnasit-Schmiede",
+  "block.betternether.cincinnasite_forged": "Geschmiedeter Cincinnasitblock",
+  "block.betternether.cincinnasite_frame": "Cincinnasitrahmen",
+  "block.betternether.cincinnasite_lantern": "Cincinnasitlaterne",
+  "block.betternether.cincinnasite_ore": "Cincinnasiterz",
+  "block.betternether.cincinnasite_pedestal": "Cincinnasitpodest",
+  "block.betternether.cincinnasite_pillar": "Cincinnasitsäule",
+  "block.betternether.cincinnasite_plate": "Cincinnasitplatte",
+  "block.betternether.cincinnasite_pot": "Cincinnasit-Topf",
+  "block.betternether.cincinnasite_slab": "Cincinnasitstufe",
+  "block.betternether.cincinnasite_stairs": "Cincinnasittreppe",
+  "block.betternether.cincinnasite_tile_large": "Cincinnasitfließe",
+  "block.betternether.cincinnasite_tile_small": "Cincinnasitkachel",
+  "block.betternether.cincinnasite_wall": "Cincinnasitmauer",
 
-  "block.betternether.egg_plant": "Egg Plant",
+  "block.betternether.egg_plant": "Aubergine",
 
-  "block.betternether.eye_seed": "Eye Seed",
+  "block.betternether.eye_seed": "Augsamen",
 
-  "block.betternether.farmland": "Farmland",
+  "block.betternether.farmland": "Ackerboden",
 
-  "block.betternether.gray_mold": "Gray Mold",
+  "block.betternether.gray_mold": "Grauschimmel",
 
-  "block.betternether.ink_bush": "Ink Bush",
-  "block.betternether.ink_bush_seed": "Ink Bush Seed",
+  "block.betternether.ink_bush": "Tintenbusch",
+  "block.betternether.ink_bush_seed": "Tintenbuschsamen",
 
-  "block.betternether.lucis_spore": "Lucis Spore",
+  "block.betternether.lucis_spore": "Lucis-Sporen",
 
-  "block.betternether.magma_flower": "Magma Flower Seed",
+  "block.betternether.magma_flower": "Magmablumensamen",
 
   "block.betternether.nether_brick_tile_large": "Large Nether Brick Tile",
   "block.betternether.nether_brick_tile_slab": "Small Nether Brick Tile Slab",
