--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -189,7 +189,7 @@
   "block.betternether.stalagnate_seed": "Stalagnatsamen",
   "block.betternether.wart_seed": "Warzensamen",
 
-  "block.betternether.eye_vine": "Augrebe",
+  "block.betternether.eye_vine": "Augranke",
   "block.betternether.black_apple": "Dunkelapfelbusch",
 
   "commands.findnethercity.usage.console": "Eingabe enthält keine Koordinaten",
@@ -225,11 +225,11 @@
   "block.betternether.wart_trapdoor": "Warzenfalltür",
   "block.betternether.wart_door": "Warzentür",
 
-  "block.betternether.black_vine": "Dunkelrebe",
+  "block.betternether.black_vine": "Dunkelranke",
   "block.betternether.veined_sand": "Ädriger Sand",
-  "block.betternether.soul_vein": "Seelenrebe",
-  "block.betternether.blooming_vine": "Blühende Rebe",
-  "block.betternether.golden_vine": "Goldrebe",
+  "block.betternether.soul_vein": "Seelenranke",
+  "block.betternether.blooming_vine": "Blühende ranke",
+  "block.betternether.golden_vine": "Goldranke",
   "block.betternether.geyser": "Geysir",
 
   "item.betternether.cincinnasite_shovel": "Cincinnasitschaufel",
@@ -522,145 +522,145 @@
   "item.betternether.nether_ruby_hoe": "Nether-Rubinhacke",
   "item.betternether.nether_ruby_hammer": "Nether-Rubinhammer",
 
-  "config.betternether.config": "Better Nether Config",
-  "config.betternether.mod_reload": "§b§lYou need to restart Minecraft to apply this changes!",
-  "config.betternether.rendering": "Render Options",
-  "config.betternether.blocks": "Registered Blocks",
-  "config.betternether.items": "Registered Items",
-  "config.betternether.biomes": "Biomes Options",
-  "config.betternether.subbiomes": "Sub-biomes Options",
-  "config.betternether.biomes_edges": "Biomes Edges Options",
-  "config.betternether.generator": "Generator Options",
-  "config.betternether.global_structures_density": "Global Foliage & Structures Density",
-  "config.betternether.structures_density": "Structures Density",
-  "config.betternether.cities_dist": "Distance Between Cities [in chunks]",
+  "config.betternether.config": "Better Nether Einstellungen",
+  "config.betternether.mod_reload": "§b§lMinecraft muss neu gestartet werden!",
+  "config.betternether.rendering": "Anzeige Optionen",
+  "config.betternether.blocks": "Registrierte Blöcke",
+  "config.betternether.items": "Registrierte Items",
+  "config.betternether.biomes": "Biomeinstellungen",
+  "config.betternether.subbiomes": "Unterbiom-Einstellungen",
+  "config.betternether.biomes_edges": "Biomrand-Einstellungen",
+  "config.betternether.generator": "Generator-Einstellungen",
+  "config.betternether.global_structures_density": "GLobale Blatt und Bauwerkdichte",
+  "config.betternether.structures_density": "Bauwerkdichte",
+  "config.betternether.cities_dist": "Abstand zwischen Städten [in Chunks]",
 
-  "config.betternether.reset": "Reset",
-  "config.betternether.fog": "Fog Distance",
-  "config.betternether.lavafalls": "§b*§rLavafall Particles",
-  "config.betternether.armour": "§b*§rThin Armor",
+  "config.betternether.reset": "Zurücksetzen",
+  "config.betternether.fog": "Nebel Reichweite",
+  "config.betternether.lavafalls": "§b*§rLavafall-Pratikel",
+  "config.betternether.armour": "§b*§rDünne Rüstung",
 
-  "block.betternether.crafting_table_crimson": "Crimson Crafting Table",
-  "block.betternether.crafting_table_warped": "Warped Crafting Table",
+  "block.betternether.crafting_table_crimson": "Karmesinwerkbank",
+  "block.betternether.crafting_table_warped": "Wirrwerkbank",
 
-  "block.betternether.crafting_table_stalagnate": "Stalagnate Crafting Table",
-  "block.betternether.crafting_table_reed": "Reeds Crafting Table",
-  "block.betternether.crafting_table_willow": "Willow Crafting Table",
-  "block.betternether.crafting_table_wart": "Wart Crafting Table",
-  "block.betternether.crafting_table_rubeus": "Rubeus Crafting Table",
-  "block.betternether.crafting_table_mushroom": "Mushroom Crafting Table",
-  "block.betternether.crafting_table_mushroom_fir": "Mushroom Fir Crafting Table",
+  "block.betternether.crafting_table_stalagnate": "Stalagnatwerkbank",
+  "block.betternether.crafting_table_reed": "Schilfwerkbank",
+  "block.betternether.crafting_table_willow": "Weidenwerkbank",
+  "block.betternether.crafting_table_wart": "Warzenwerkbank",
+  "block.betternether.crafting_table_rubeus": "Rubeuswerkbank",
+  "block.betternether.crafting_table_mushroom": "Pilzwerkbank",
+  "block.betternether.crafting_table_mushroom_fir": "Pilztannenwerkbank",
 
-  "block.betternether.chest_stalagnate": "Stalagnate Chest",
-  "block.betternether.chest_reed": "Reeds Chest",
-  "block.betternether.chest_willow": "Willow Chest",
-  "block.betternether.chest_wart": "Wart Chest",
-  "block.betternether.chest_rubeus": "Rubeus Chest",
-  "block.betternether.chest_mushroom": "Mushroom Chest",
-  "block.betternether.chest_mushroom_fir": "Mushroom Fir Chest",
+  "block.betternether.chest_stalagnate": "Stalagnattruhe",
+  "block.betternether.chest_reed": "Schilftruhe",
+  "block.betternether.chest_willow": "Weidentruhe",
+  "block.betternether.chest_wart": "Warzentruhe",
+  "block.betternether.chest_rubeus": "Rubeustruhe",
+  "block.betternether.chest_mushroom": "Pilztruhe",
+  "block.betternether.chest_mushroom_fir": "Pilztannentruhe",
 
-  "block.betternether.chest_crimson": "Crimson Chest",
-  "block.betternether.chest_warped": "Warped Chest",
+  "block.betternether.chest_crimson": "Karmesintruhe",
+  "block.betternether.chest_warped": "Wirrtruhe",
 
-  "block.betternether.jungle_moss": "Jungle Moss",
+  "block.betternether.jungle_moss": "Dschungelmos",
 
-  "block.betternether.feather_fern": "Feather Fern",
+  "block.betternether.feather_fern": "Federfarn",
 
-  "block.betternether.sign_stalagnate": "Stalagnate Sign",
-  "block.betternether.sign_reed": "Reeds Sign",
-  "block.betternether.sign_willow": "Willow Sign",
-  "block.betternether.sign_wart": "Wart Sign",
-  "block.betternether.sign_rubeus": "Rubeus Sign",
-  "block.betternether.sign_mushroom": "Mushroom Sign",
-  "block.betternether.sign_mushroom_fir": "Mushroom Fir Sign",
+  "block.betternether.sign_stalagnate": "Stalagnatschild",
+  "block.betternether.sign_reed": "Schilfschild",
+  "block.betternether.sign_willow": "Weidenschild",
+  "block.betternether.sign_wart": "Warzenschild",
+  "block.betternether.sign_rubeus": "Rubeusschild",
+  "block.betternether.sign_mushroom": "Pilzschild",
+  "block.betternether.sign_mushroom_fir": "Pilztannenschild",
 
-  "block.betternether.barrel_stalagnate": "Stalagnate Barrel",
-  "block.betternether.barrel_reed": "Reeds Barrel",
-  "block.betternether.barrel_willow": "Willow Barrel",
-  "block.betternether.barrel_wart": "Wart Barrel",
-  "block.betternether.barrel_rubeus": "Rubeus Barrel",
-  "block.betternether.barrel_mushroom": "Mushroom Barrel",
-  "block.betternether.barrel_mushroom_fir": "Mushroom Fir Barrel",
+  "block.betternether.barrel_stalagnate": "Stalagnatfass",
+  "block.betternether.barrel_reed": "Schilffass",
+  "block.betternether.barrel_willow": "Weidenfass",
+  "block.betternether.barrel_wart": "Warzenfass",
+  "block.betternether.barrel_rubeus": "Rubeusfass",
+  "block.betternether.barrel_mushroom": "Pilzfass",
+  "block.betternether.barrel_mushroom_fir": "Pilztannenfass",
 
-  "block.betternether.barrel_crimson": "Crimson Barrel",
-  "block.betternether.barrel_warped": "Warped Barrel",
+  "block.betternether.barrel_crimson": "Karmesinfass",
+  "block.betternether.barrel_warped": "Wirrfass",
 
-  "block.betternether.crimson_ladder": "Crimsonleiter",
-  "block.betternether.warped_ladder": "Warpedleiter",
-  "block.betternether.mushroom_ladder": "Mushroomleiter",
+  "block.betternether.crimson_ladder": "Karmesinleiter",
+  "block.betternether.warped_ladder": "Wirrleiter",
+  "block.betternether.mushroom_ladder": "Pilzleiter",
 
-  "block.betternether.taburet_crimson": "Crimsonhocker",
-  "block.betternether.taburet_warped": "Warpedhocker",
-  "block.betternether.taburet_mushroom": "Mushroomhocker",
+  "block.betternether.taburet_crimson": "Karmesinhocker",
+  "block.betternether.taburet_warped": "Wirrhocker",
+  "block.betternether.taburet_mushroom": "Pilzhocker",
 
-  "block.betternether.chair_crimson": "Crimsonstuhl",
-  "block.betternether.chair_warped": "Warpedstuhl",
-  "block.betternether.chair_mushroom": "Mushroomstuhl",
+  "block.betternether.chair_crimson": "Karmesinstuhl",
+  "block.betternether.chair_warped": "Wirrstuhl",
+  "block.betternether.chair_mushroom": "Pilzstuhl",
 
-  "block.betternether.bar_stool_crimson": "Crimson Barhocker",
-  "block.betternether.bar_stool_warped": "Warped Barhocker",
-  "block.betternether.bar_stool_mushroom": "Mushroom Barhocker",
+  "block.betternether.bar_stool_crimson": "Karmesinbarhocker",
+  "block.betternether.bar_stool_warped": "Wirrbarhocker",
+  "block.betternether.bar_stool_mushroom": "Pilzbarhocker",
 
-  "block.betternether.mushroom_grass": "Mushroom Grass",
-  "block.betternether.bone_grass": "Bone Grass",
-  "block.betternether.lumabus_seed": "Lumabus Seed",
-  "block.betternether.lumabus_vine": "Lumabus Vine",
-  "item.betternether.glowstone_pile": "Glowstone Pile",
-  "block.betternether.jellyfish_mushroom": "Jellyfish Mushroom",
-  "block.betternether.jellyfish_mushroom_sapling": "Jellyfish Mushroom Sapling",
-  "block.betternether.bone_stalactite": "Bone Stalactite",
-  "block.betternether.cincinnasite_chain": "CincinnasitChain",
-  "block.betternether.nether_lapis_ore": "Nether Lapis Ore",
-  "item.betternether.lapis_pile": "Lapis Pile",
-  "item.betternether.cincinnasite_excavator": "CincinnasitExcavator",
-  "item.betternether.cincinnasite_excavator_diamond": "Cincinnasite-Diamond Excavator",
-  "item.betternether.nether_ruby_excavator": "Ruby Excavator",
+  "block.betternether.mushroom_grass": "Pilzgras",
+  "block.betternether.bone_grass": "Knochengras",
+  "block.betternether.lumabus_seed": "Lumabussamen",
+  "block.betternether.lumabus_vine": "Lumabusranke",
+  "item.betternether.glowstone_pile": "Glowstone-Haufen",
+  "block.betternether.jellyfish_mushroom": "Quallenpilz",
+  "block.betternether.jellyfish_mushroom_sapling": "Quallenpilzsetzling",
+  "block.betternether.bone_stalactite": "Knochen-Tropfstein",
+  "block.betternether.cincinnasite_chain": "Cincinnasitkette",
+  "block.betternether.nether_lapis_ore": "Nether-Lapiserz",
+  "item.betternether.lapis_pile": "Lapis-Haufen",
+  "item.betternether.cincinnasite_excavator": "Cincinnasitbagger",
+  "item.betternether.cincinnasite_excavator_diamond": "Cincinnasite-Diamentenbagger",
+  "item.betternether.nether_ruby_excavator": "Rubinbagger",
 
-  "block.betternether.sepia_mushroom_grass": "Sepian Mushroom Grass",
-  "block.betternether.sepia_bone_grass": "Sepian Bone Grass",
-  "block.betternether.golden_lumabus_seed": "Golden Lumabus Seed",
-  "block.betternether.golden_lumabus_vine": "Golden Lumabus Vine",
+  "block.betternether.sepia_mushroom_grass": "Sepiapilzgras",
+  "block.betternether.sepia_bone_grass": "Sepiaknochengras",
+  "block.betternether.golden_lumabus_seed": "Goldener Lumabussamen",
+  "block.betternether.golden_lumabus_vine": "Goldene Lumabusranke",
 
-  "block.betternether.cincinnasite_fire_bowl": "CincinnasitFire Bowl",
-  "block.betternether.bricks_fire_bowl": "Nether Brick Fire Bowl",
-  "block.betternether.netherite_fire_bowl": "Netherite Fire Bowl",
-  "block.betternether.cincinnasite_fire_bowl_soul": "CincinnasitSoul Fire Bowl",
-  "block.betternether.bricks_fire_bowl_soul": "Nether Brick Soul Fire Bowl",
-  "block.betternether.netherite_fire_bowl_soul": "Netherite Soul Fire Bowl",
+  "block.betternether.cincinnasite_fire_bowl": "Cincinnasit Feuerschale",
+  "block.betternether.bricks_fire_bowl": "Nethersetine Feuerschale",
+  "block.betternether.netherite_fire_bowl": "Netherit Feuerschale",
+  "block.betternether.cincinnasite_fire_bowl_soul": "Cincinnasit Seelenfeuerschale",
+  "block.betternether.bricks_fire_bowl_soul": "Netherstein Seelenfeuerschale",
+  "block.betternether.netherite_fire_bowl_soul": "Netherit Seelenfeuerschale",
 
-  "block.betternether.swampland_grass": "Swampland Grass",
+  "block.betternether.swampland_grass": "Sumpflandgras",
   "block.betternether.basalt_slab": "Basaltstufe",
 
-  "block.betternether.anchor_tree_bark": "Anchor Tree Bark",
-  "block.betternether.anchor_tree_button": "Anchor Treeknopf",
-  "block.betternether.anchor_tree_door": "Anchor Tree Door",
-  "block.betternether.anchor_tree_fence": "Anchor Treezaun",
-  "block.betternether.anchor_tree_gate": "Anchor Treezauntor",
-  "block.betternether.anchor_tree_ladder": "Anchor Treeleiter",
-  "block.betternether.anchor_tree_log": "Anchor Treestamm",
-  "block.betternether.anchor_tree_planks": "Anchor Treebretter",
-  "block.betternether.anchor_tree_plate": "Anchor Treedruckplatte",
-  "block.betternether.anchor_tree_slab": "Anchor Treestufe",
-  "block.betternether.anchor_tree_stairs": "Anchor Treetreppe",
-  "block.betternether.anchor_tree_trapdoor": "Anchor Treefalltür",
-  "block.betternether.barrel_anchor_tree": "Anchor Tree Barrel",
-  "block.betternether.bar_stool_anchor_tree": "Anchor Tree Barhocker",
-  "block.betternether.chair_anchor_tree": "Anchor Treestuhl",
-  "block.betternether.chest_anchor_tree": "Anchor Tree Chest",
-  "block.betternether.crafting_table_anchor_tree": "Anchor Tree Crafting Table",
-  "block.betternether.sign_anchor_tree": "Anchor Tree Sign",
-  "block.betternether.striped_bark_anchor_tree": "Stripped Anchor Tree Bark",
-  "block.betternether.striped_log_anchor_tree": "Stripped Anchor Treestamm",
-  "block.betternether.taburet_anchor_tree": "Anchor Tree Taburet",
+  "block.betternether.anchor_tree_bark": "Ankerbaumholz",
+  "block.betternether.anchor_tree_button": "Ankerbaumknopf",
+  "block.betternether.anchor_tree_door": "Ankerbaumtür",
+  "block.betternether.anchor_tree_fence": "Ankerbaumzaun",
+  "block.betternether.anchor_tree_gate": "Ankerbaumzauntor",
+  "block.betternether.anchor_tree_ladder": "Ankerbaumleiter",
+  "block.betternether.anchor_tree_log": "Ankerbaumstamm",
+  "block.betternether.anchor_tree_planks": "Ankerbaumbretter",
+  "block.betternether.anchor_tree_plate": "Ankerbaumdruckplatte",
+  "block.betternether.anchor_tree_slab": "Ankerbaumstufe",
+  "block.betternether.anchor_tree_stairs": "Ankerbaumtreppe",
+  "block.betternether.anchor_tree_trapdoor": "Ankerbaumfalltür",
+  "block.betternether.barrel_anchor_tree": "Ankerbaumfass",
+  "block.betternether.bar_stool_anchor_tree": "Ankerbaumbarhocker",
+  "block.betternether.chair_anchor_tree": "Ankerbaumstuhl",
+  "block.betternether.chest_anchor_tree": "Ankerbaumtruhe",
+  "block.betternether.crafting_table_anchor_tree": "Ankerbaumwerkbank",
+  "block.betternether.sign_anchor_tree": "Ankerbaumschild",
+  "block.betternether.striped_bark_anchor_tree": "Entrindetes Ankerbaumholz",
+  "block.betternether.striped_log_anchor_tree": "Entrindeter Ankerbaumstamm",
+  "block.betternether.taburet_anchor_tree": "Ankerbaumtischchen",
 
-  "block.betternether.anchor_tree_vine": "Anchor Tree Vine",
-  "block.betternether.anchor_tree_leaves": "Anchor Tree Leaves",
-  "block.betternether.anchor_tree_sapling": "Anchor Tree Sapling",
+  "block.betternether.anchor_tree_vine": "Ankerbaumranke",
+  "block.betternether.anchor_tree_leaves": "Ankerbaumblätter",
+  "block.betternether.anchor_tree_sapling": "Ankerbaumsetzling",
 
-  "block.betternether.giant_lucis": "Giant Lucis",
-  "block.betternether.moss_cover": "Moss Cover",
+  "block.betternether.giant_lucis": "Riesenlucis",
+  "block.betternether.moss_cover": "Moosdecke",
 
-  "block.betternether.nether_sakura_bark": "Nether Sakura Bark",
+  "block.betternether.nether_sakura_bark": "Nether Sakuraholz",
   "block.betternether.nether_sakura_button": "Nether Sakuraknopf",
   "block.betternether.nether_sakura_door": "Nether Sakura Door",
   "block.betternether.nether_sakura_fence": "Nether Sakurazaun",
@@ -672,27 +672,27 @@
   "block.betternether.nether_sakura_slab": "Nether Sakurastufe",
   "block.betternether.nether_sakura_stairs": "Nether Sakuratreppe",
   "block.betternether.nether_sakura_trapdoor": "Nether Sakurafalltür",
-  "block.betternether.barrel_nether_sakura": "Nether Sakura Barrel",
-  "block.betternether.bar_stool_nether_sakura": "Nether Sakura Barhocker",
+  "block.betternether.barrel_nether_sakura": "Nether Sakurafass",
+  "block.betternether.bar_stool_nether_sakura": "Nether Sakurabarhocker",
   "block.betternether.chair_nether_sakura": "Nether Sakurastuhl",
-  "block.betternether.chest_nether_sakura": "Nether Sakura Chest",
-  "block.betternether.crafting_table_nether_sakura": "Nether Sakura Crafting Table",
-  "block.betternether.sign_nether_sakura": "Nether Sakura Sign",
-  "block.betternether.striped_bark_nether_sakura": "Stripped Nether Sakura Bark",
-  "block.betternether.striped_log_nether_sakura": "Stripped Nether Sakurastamm",
+  "block.betternether.chest_nether_sakura": "Nether Sakuratruhe",
+  "block.betternether.crafting_table_nether_sakura": "Nether Sakurawerkbank",
+  "block.betternether.sign_nether_sakura": "Nether Sakuraschild",
+  "block.betternether.striped_bark_nether_sakura": "Entrindetes Nether Sakuraholz",
+  "block.betternether.striped_log_nether_sakura": "Entrindeter Nether Sakurastamm",
   "block.betternether.taburet_nether_sakura": "Nether Sakurahocker",
 
-  "block.betternether.nether_sakura_leaves": "Nether Sakura Leaves",
-  "block.betternether.nether_sakura_sapling": "Nether Sakura Sapling",
+  "block.betternether.nether_sakura_leaves": "Nether Sakurablätter",
+  "block.betternether.nether_sakura_sapling": "Nether Sakurasetzling",
 
-  "block.betternether.ceiling_mushrooms": "Ceiling Mushrooms",
+  "block.betternether.ceiling_mushrooms": "Deckenpilze",
   "block.betternether.neon_equisetum": "Neon Equisetum",
-  "block.betternether.hook_mushroom": "Hook Mushroom",
-  "item.betternether.hook_mushroom_cooked": "Cooked Hook Mushroom",
+  "block.betternether.hook_mushroom": "Hakenpilz",
+  "item.betternether.hook_mushroom_cooked": "Gekochter Hakenpilz",
 
-  "block.betternether.whispering_gourd_vine": "Whispering Gourd Seeds",
-  "block.betternether.whispering_gourd": "Whispering Gourd",
-  "block.betternether.whispering_gourd_lantern": "Whispering Gourd Lantern",
+  "block.betternether.whispering_gourd_vine": "Säuselnde Kalebassensamen",
+  "block.betternether.whispering_gourd": "Säuselnde Kalebasse",
+  "block.betternether.whispering_gourd_lantern": "Säuselnde Kalebassenlaterne",
 
-  "block.betternether.willow_torch": "Willow Torch"
+  "block.betternether.willow_torch": "Weidenfackel"
 }
