--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -228,7 +228,7 @@
   "block.betternether.black_vine": "Dunkelranke",
   "block.betternether.veined_sand": "Ädriger Sand",
   "block.betternether.soul_vein": "Seelenranke",
-  "block.betternether.blooming_vine": "Blühende ranke",
+  "block.betternether.blooming_vine": "Blühende Ranke",
   "block.betternether.golden_vine": "Goldranke",
   "block.betternether.geyser": "Geysir",
 
