Added Roofs Blocks to complex wood material

--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -307,9 +307,9 @@
   "block.betternether.roof_tile_reeds": "Schilfschindel",
   "block.betternether.roof_tile_reeds_stairs": "Schilfschindeltreppe",
   "block.betternether.roof_tile_reeds_slab": "Schilfschindelstufe",
-  "block.betternether.roof_tile_stalagnate": "Stalagnatschindel",
-  "block.betternether.roof_tile_stalagnate_stairs": "Stalagnatschindeltreppe",
-  "block.betternether.roof_tile_stalagnate_slab": "Stalagnatschindelstufe",
+  "block.betternether.stalagnate_roof": "Stalagnatschindel",
+  "block.betternether.stalagnate_roof_stairs": "Stalagnatschindeltreppe",
+  "block.betternether.stalagnate_roof_slab": "Stalagnatschindelstufe",
   "block.betternether.roof_tile_nether_bricks": "Nethersteinschindel",
   "block.betternether.roof_tile_nether_bricks_stairs": "Nethersteinschindeltreppe",
   "block.betternether.roof_tile_nether_bricks_slab": "Nethersteinschindelstufe",
