--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -307,9 +307,9 @@
 	"block.betternether.roof_tile_reeds": "Reeds Roof Tile",
 	"block.betternether.roof_tile_reeds_stairs": "Reeds Roof Tile Stairs",
 	"block.betternether.roof_tile_reeds_slab": "Reeds Roof Tile Slab",
-	"block.betternether.roof_tile_stalagnate": "Stalagnate Roof Tile",
-	"block.betternether.roof_tile_stalagnate_stairs": "Stalagnate Roof Tile Stairs",
-	"block.betternether.roof_tile_stalagnate_slab": "Stalagnate Roof Tile Slab",
+	"block.betternether.stalagnate_roof": "Stalagnate Roof Tile",
+	"block.betternether.stalagnate_roof_stairs": "Stalagnate Roof Tile Stairs",
+	"block.betternether.stalagnate_roof_slab": "Stalagnate Roof Tile Slab",
 	"block.betternether.roof_tile_nether_bricks": "Nether Bricks Roof Tile",
 	"block.betternether.roof_tile_nether_bricks_stairs": "Nether Bricks Roof Tile Stairs",
 	"block.betternether.roof_tile_nether_bricks_slab": "Nether Bricks Roof Tile Slab",
