--- a/src/main/resources/assets/betternether/lang/pl_pl.json
+++ b/src/main/resources/assets/betternether/lang/pl_pl.json
@@ -285,9 +285,9 @@
 	"block.betternether.roof_tile_reeds": "Trzcinowe dachówki",
 	"block.betternether.roof_tile_reeds_stairs": "Schody z trzcinowych dachówek",
 	"block.betternether.roof_tile_reeds_slab": "Płyta z trzcinowych dachówek",
-	"block.betternether.roof_tile_stalagnate": "Stalagnatowcowe dachówki",
-	"block.betternether.roof_tile_stalagnate_stairs": "Schody ze stalagnatowcowych dachówek",
-	"block.betternether.roof_tile_stalagnate_slab": "Płyta ze stalagnatowcowych dachówek",
+	"block.betternether.stalagnate_roof": "Stalagnatowcowe dachówki",
+	"block.betternether.stalagnate_roof_stairs": "Schody ze stalagnatowcowych dachówek",
+	"block.betternether.stalagnate_roof_slab": "Płyta ze stalagnatowcowych dachówek",
 	"block.betternether.roof_tile_nether_bricks": "Netherowe ceglane dachówki",
 	"block.betternether.roof_tile_nether_bricks_stairs": "Schody z netherowych ceglanych dachówek",
 	"block.betternether.roof_tile_nether_bricks_slab": "Płyta z netherowych ceglanych dachówek",
