--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -307,9 +307,9 @@
 	"block.betternether.roof_tile_reeds": "Тростниковая черепица",
 	"block.betternether.roof_tile_reeds_stairs": "Ступени из тростниковой черепицы",
 	"block.betternether.roof_tile_reeds_slab": "Плита из тростниковой черепица",
-	"block.betternether.roof_tile_stalagnate": "Сталагнатовая черепица",
-	"block.betternether.roof_tile_stalagnate_stairs": "Ступени из сталагнатовой черепицы",
-	"block.betternether.roof_tile_stalagnate_slab": "Плита из сталагнатовой черепица",
+	"block.betternether.stalagnate_roof": "Сталагнатовая черепица",
+	"block.betternether.stalagnate_roof_stairs": "Ступени из сталагнатовой черепицы",
+	"block.betternether.stalagnate_roof_slab": "Плита из сталагнатовой черепица",
 	"block.betternether.roof_tile_nether_bricks": "Кирпичная черепица",
 	"block.betternether.roof_tile_nether_bricks_stairs": "Ступени из кирпичной черепицы",
 	"block.betternether.roof_tile_nether_bricks_slab": "Плита из кирпичной черепица",
