--- a/src/main/resources/assets/betternether/lang/zh_cn.json
+++ b/src/main/resources/assets/betternether/lang/zh_cn.json
@@ -307,9 +307,9 @@
 	"block.betternether.roof_tile_reeds": "下界芦苇屋面瓦",
 	"block.betternether.roof_tile_reeds_stairs": "下界芦苇屋面瓦楼梯",
 	"block.betternether.roof_tile_reeds_slab": "下界芦苇屋面瓦台阶",
-	"block.betternether.roof_tile_stalagnate": "石结木屋面瓦",
-	"block.betternether.roof_tile_stalagnate_stairs": "石结木屋面瓦楼梯",
-	"block.betternether.roof_tile_stalagnate_slab": "石结木屋面瓦台阶",
+	"block.betternether.stalagnate_roof": "石结木屋面瓦",
+	"block.betternether.stalagnate_roof_stairs": "石结木屋面瓦楼梯",
+	"block.betternether.stalagnate_roof_slab": "石结木屋面瓦台阶",
 	"block.betternether.roof_tile_nether_bricks": "下界砖屋面瓦",
 	"block.betternether.roof_tile_nether_bricks_stairs": "下界砖屋面瓦楼梯",
 	"block.betternether.roof_tile_nether_bricks_slab": "下界砖屋面瓦台阶",
